# GClizard-rs

./: Cargo.toml  notes.md
lib_lizardrs/: Cargo.toml
lib_lizardrs/src/: lib.rs  utils.rs
lib_lizardrs/tests/: convex_convex_tests.rs  tests.rs
macroquad_playground/: Cargo.toml
macroquad_playground/src/: main.rs
unittest_research/: coplanar_issues.dxf  coplanar_issues.dxf~
