[package]
name = "macroquad_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_lizardrs = {path="../lib_lizardrs",version="0.1.0"}
egui = "0.18.0"
egui-miniquad = "0.11.0"
egui-macroquad = "0.11.0"
macroquad = "0.3.16"